html grid__str add

--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,54 @@
     <title>Mirro</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="logo"></div>
+        <div class="empty"></div>
+        <nav class="navigation">
+            <ul class="navigation__ul">
+                <li class="navigation__li1"></li>
+                <li class="navigation__li2"></li>
+                <li class="navigation__li3"></li>
+                <li class="navigation__li4"></li>
+                <li class="navigation__li5"></li>
+                <li class="navigation__li6"></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <section class="intro">
+            <div class="introLeft">
+                <div class="introLeft__div"></div>
+                <h1 class="introLeft__h1"></h1>
+                <p class="introLeft__p"></p>
+                <a href="" class="introLeft__a"></a>
+                <div class="introLeft__div"></div>
+            </div>
+            <div class="introRight">
+                <div class="introRight__img"></div>
+            </div>
+        </section>
+        <section class="services">
+            <div class="servicesIntroWrap">
+                <span class="servicesIntroWrap__wave"></span>
+                <h3 class="servicesIntroWrap__h3"></h3>
+                <p class="servicesIntroWrap__p"></p>
+            </div>
+            <div class="servicesGridWrap">
+                <div class="servicesGridWrap__div1"></div>
+                <div class="servicesGridWrap__div2"></div>
+                <div class="servicesGridWrap__div3"></div>
+                <div class="servicesGridWrap__div4"></div>
+                <div class="servicesGridWrap__div5"></div>
+                <div class="servicesGridWrap__div6"></div>
+                <div class="servicesGridWrap__div7"></div>
+            </div>
+        </section>
+        <section class="presetStore">
+            
+        </section>
+        <section class="section4"></section>
+    </main>
+    <footer class="footer"></footer>
 </body>
 </html>
