--- a/Index.html
+++ b/Index.html
@@ -5,21 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mirro</title>
+    <link rel="shortcut icon" href="/img/logo_ico.ico" type="image/x-icon">
 </head>
 <body>
     <header class="header">
-        <div class="logo"></div>
-        <div class="empty"></div>
-        <nav class="navigation">
-            <ul class="navigation__ul">
-                <li class="navigation__li1"></li>
-                <li class="navigation__li2"></li>
-                <li class="navigation__li3"></li>
-                <li class="navigation__li4"></li>
-                <li class="navigation__li5"></li>
-                <li class="navigation__li6"></li>
-            </ul>
-        </nav>
+        <div class="headerWrap">
+            <div class="logo"></div>
+            <div class="empty"></div>
+            <nav class="navigation">
+                <ul class="navigation__ul">
+                    <li class="navigation__li1"></li>
+                    <li class="navigation__li2"></li>
+                    <li class="navigation__li3"></li>
+                    <li class="navigation__li4"></li>
+                    <li class="navigation__li5"></li>
+                    <li class="navigation__li6"></li>
+                </ul>
+            </nav>
+        </div>   
     </header>
     <main class="main">
         <section class="intro">
@@ -50,11 +53,48 @@
                 <div class="servicesGridWrap__div7"></div>
             </div>
         </section>
-        <section class="presetStore">
-            
+        <section class="preset">
+            <div class="presetIntroWrap">
+                <span class="presetIntroWrap__wave"></span>
+                <h3 class="presetIntroWrap__h3"></h3>
+                <p class="presetIntroWrap__p"></p>
+            </div> 
+            <div class="presetGridWrap">
+                <div class="presetGridWrap__div1"></div>
+                <div class="presetGridWrap__div2"></div>
+                <div class="presetGridWrap__div3"></div>
+            </div>
+            <div class="presetLinkWrap">
+                <a href="#" class="preset__btn"></a>
+            </div>
         </section>
-        <section class="section4"></section>
+        <section class="contact">
+            <div class="contactWrap">
+                <p class="contactWrap__paragraph"></p>
+                <a href="" class="contactWrap__btn"></a>
+            </div>
+        </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <h2 class="logo__h2"></h2>
+        <div class="footerGridWrap">
+            <div class="pages"></div>
+            <div class="presetPacks"></div>
+            <div class="utilityPages"></div>
+            <div class="newsletter"></div>
+            <div class="storeCategories"></div>
+            <div class="businesAreas"></div>
+        </div>
+        <div class="footerInfo">
+            <span class="rights"></span>
+            <span class="social">
+                <span class="linkedin"></span>
+                <span class="facebook"></span>
+                <span class="instagram"></span>
+                <span class="twitter"></span>
+            </span>
+        </div>
+
+    </footer>
 </body>
 </html>
