--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mirro</title>
     <link rel="shortcut icon" href="/img/logo_ico.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../style/normalize.css">
+    <link rel="stylesheet" href="../style/Style.css">
 </head>
 <body>
     <header class="header">
