add fonts. edit header

--- a/Index.html
+++ b/Index.html
@@ -16,12 +16,12 @@
             <div class="empty"></div>
             <nav class="navigation">
                 <ul class="navigation__ul">
-                    <li class="navigation__li1"></li>
-                    <li class="navigation__li2"></li>
-                    <li class="navigation__li3"></li>
-                    <li class="navigation__li4"></li>
-                    <li class="navigation__li5"></li>
-                    <li class="navigation__li6"></li>
+                    <li class="navigation__presets">Presets</li>
+                    <li class="navigation__prints">Prints</li>
+                    <li class="navigation__store">Store</li>
+                    <li class="navigation__about">About</li>
+                    <li class="navigation__contact">Contact</li>
+                    <li class="navigation__cart">Cart</li>
                 </ul>
             </nav>
         </div>   
