--- a/Index.html
+++ b/Index.html
@@ -34,30 +34,35 @@
     </header>
     <main class="main">
         <section class="intro">
-            <div class="introLeft">
-                <h1 class="introLeft__h1">Hi, I'm James Mirro & I'm a photographer.</h1>
-                <p class="introLeft__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-                <div class="introLeft__a"><a href="#">Read more</a></div>
-            </div>
-            <div class="introRight">
-                <div class="introRight__img"></div>
-            </div>
+            <div class="introWrap">
+                <div class="introLeft">
+                    <h1 class="introLeft__h1">Hi, I'm James Mirro & I'm a photographer.</h1>
+                    <p class="introLeft__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                    <div class="introLeft__a"><a href="#">Read more</a></div>
+                </div>
+                <div class="introRight">
+                    <div class="introRight__img"></div>
+                </div>
+            </div> 
         </section>
         <section class="services">
-            <div class="servicesIntroWrap">
-                <span class="servicesIntroWrap__wave"></span>
-                <h3 class="servicesIntroWrap__h3"></h3>
-                <p class="servicesIntroWrap__p"></p>
+            <div class="servicesWrap">
+                <div class="servicesIntroWrap">
+                    <span class="servicesIntroWrap__wave"></span>
+                    <h3 class="servicesIntroWrap__h3">Services</h3>
+                    <p class="servicesIntroWrap__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
+                </div>
+                <div class="servicesGridWrap">
+                    <div class="servicesGridWrap__div1"></div>
+                    <div class="servicesGridWrap__div2"></div>
+                    <div class="servicesGridWrap__div3"></div>
+                    <div class="servicesGridWrap__div4"></div>
+                    <div class="servicesGridWrap__div5"></div>
+                    <div class="servicesGridWrap__div6"></div>
+                    <div class="servicesGridWrap__div7"></div>
+                </div>
             </div>
-            <div class="servicesGridWrap">
-                <div class="servicesGridWrap__div1"></div>
-                <div class="servicesGridWrap__div2"></div>
-                <div class="servicesGridWrap__div3"></div>
-                <div class="servicesGridWrap__div4"></div>
-                <div class="servicesGridWrap__div5"></div>
-                <div class="servicesGridWrap__div6"></div>
-                <div class="servicesGridWrap__div7"></div>
-            </div>
+            
         </section>
         <section class="preset">
             <div class="presetIntroWrap">
