--- a/Index.html
+++ b/Index.html
@@ -53,16 +53,50 @@
                     <p class="servicesIntroWrap__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
                 </div>
                 <div class="servicesGridWrap">
-                    <div class="servicesGridWrap__div1"></div>
-                    <div class="servicesGridWrap__div2"></div>
-                    <div class="servicesGridWrap__div3"></div>
-                    <div class="servicesGridWrap__div4"></div>
-                    <div class="servicesGridWrap__div5"></div>
-                    <div class="servicesGridWrap__div6"></div>
-                    <div class="servicesGridWrap__div7"></div>
+                    <div class="servicesGridWrap__div1 s_cell">
+                        <span class="s_cell_img"></span>
+                        <h4 class="s_cell_h4"></h4>
+                        <p class="p_cell_p"></p>
+                        <span class="s_cell_btn"></span>
+                    </div>
+                    <div class="servicesGridWrap__div2 s_cell">
+                        <span class="s_cell_img"></span>
+                        <h4 class="s_cell_h4"></h4>
+                        <p class="p_cell_p"></p>
+                        <span class="s_cell_btn"></span>
+                    </div>
+                    <div class="servicesGridWrap__div3 s_cell">
+                        <span class="s_cell_img"></span>
+                        <h4 class="s_cell_h4"></h4>
+                        <p class="p_cell_p"></p>
+                        <span class="s_cell_btn"></span>
+                    </div>
+                    <div class="servicesGridWrap__div4 s_cell">
+                        <span class="s_cell_img"></span>
+                        <h4 class="s_cell_h4"></h4>
+                        <p class="p_cell_p"></p>
+                        <span class="s_cell_btn"></span>
+                    </div>
+                    <div class="servicesGridWrap__div5 s_cell">
+                        <span class="s_cell_img"></span>
+                        <h4 class="s_cell_h4"></h4>
+                        <p class="p_cell_p"></p>
+                        <span class="s_cell_btn"></span>
+                    </div>
+                    <div class="servicesGridWrap__div6 s_cell">
+                        <span class="s_cell_img"></span>
+                        <h4 class="s_cell_h4"></h4>
+                        <p class="p_cell_p"></p>
+                        <span class="s_cell_btn"></span>
+                    </div>
+                    <div class="servicesGridWrap__div7 s_cell">
+                        <span class="s_cell_img"></span>
+                        <h4 class="s_cell_h4"></h4>
+                        <p class="p_cell_p"></p>
+                        <span class="s_cell_btn"></span>
+                    </div>
                 </div>
-            </div>
-            
+            </div>         
         </section>
         <section class="preset">
             <div class="presetIntroWrap">
