--- a/Index.html
+++ b/Index.html
@@ -55,45 +55,45 @@
                 <div class="servicesGridWrap">
                     <div class="servicesGridWrap__div1 s_cell">
                         <span class="s_cell_img"></span>
-                        <h4 class="s_cell_h4"></h4>
-                        <p class="p_cell_p"></p>
-                        <span class="s_cell_btn"></span>
+                        <h4 class="s_cell_h4">Wedding Photography</h4>
+                        <p class="p_cell_p">Wedding photography is often called the bread and butter of photographers — but that doesn't mean it has to be boring. Quite the opposite!</p>
+                        <span class="s_cell_btn"><a href="#" class="s_cell_btn_a">Read more</a></span>
                     </div>
                     <div class="servicesGridWrap__div2 s_cell">
                         <span class="s_cell_img"></span>
-                        <h4 class="s_cell_h4"></h4>
-                        <p class="p_cell_p"></p>
-                        <span class="s_cell_btn"></span>
+                        <h4 class="s_cell_h4">Sports Photography</h4>
+                        <p class="p_cell_p">Sports photography is awesome. Sitting on the sidelines with a massive telephoto allows me to get right into the action — I love shooting sports where there's a lot of explosive movement.</p>
+                        <span class="s_cell_btn"><a href="" class="s_cell_btn_a">Read more</a></span>
                     </div>
                     <div class="servicesGridWrap__div3 s_cell">
                         <span class="s_cell_img"></span>
-                        <h4 class="s_cell_h4"></h4>
-                        <p class="p_cell_p"></p>
-                        <span class="s_cell_btn"></span>
+                        <h4 class="s_cell_h4">Portrait Photography</h4>
+                        <p class="p_cell_p">Who doesn't love portrait photography? I love being able to capture that expression, quirk, smile or whatever, that sort of defines a person.</p>
+                        <span class="s_cell_btn"><a href="" class="s_cell_btn_a">Read more</a></span>
                     </div>
                     <div class="servicesGridWrap__div4 s_cell">
                         <span class="s_cell_img"></span>
-                        <h4 class="s_cell_h4"></h4>
-                        <p class="p_cell_p"></p>
-                        <span class="s_cell_btn"></span>
+                        <h4 class="s_cell_h4">Architecture Photography</h4>
+                        <p class="p_cell_p">The nice thing about shooting architecture (in my opinion) is that it's so easy to do. Seriously, just pick up your camera and get out there.</p>
+                        <span class="s_cell_btn"><a href="" class="s_cell_btn_a">Read more</a></span>
                     </div>
                     <div class="servicesGridWrap__div5 s_cell">
                         <span class="s_cell_img"></span>
-                        <h4 class="s_cell_h4"></h4>
-                        <p class="p_cell_p"></p>
-                        <span class="s_cell_btn"></span>
+                        <h4 class="s_cell_h4">Animal Photography</h4>
+                        <p class="p_cell_p">Whenever I'm travelling I always make sure to pack gear that allows me to capture the local wildlife. The eagle that takes flight in this picture is probably my most prized image.</p>
+                        <span class="s_cell_btn"><a href="" class="s_cell_btn_a">Read more</a></span>
                     </div>
                     <div class="servicesGridWrap__div6 s_cell">
                         <span class="s_cell_img"></span>
-                        <h4 class="s_cell_h4"></h4>
-                        <p class="p_cell_p"></p>
-                        <span class="s_cell_btn"></span>
+                        <h4 class="s_cell_h4">Food Photography</h4>
+                        <p class="p_cell_p">I do food photography for blogs, restaurants, influencers, YouTube channels — but most importantly (if I manage to cook something that looks good) — I do food photography for myself.</p>
+                        <span class="s_cell_btn"><a href="" class="s_cell_btn_a">Read more</a></span>
                     </div>
                     <div class="servicesGridWrap__div7 s_cell">
                         <span class="s_cell_img"></span>
-                        <h4 class="s_cell_h4"></h4>
-                        <p class="p_cell_p"></p>
-                        <span class="s_cell_btn"></span>
+                        <h4 class="s_cell_h4">Nature Photography</h4>
+                        <p class="p_cell_p">Landscape photography just never gets old. Someone told me that those are the kinds of pictures you never look. Well, I don't agree.</p>
+                        <span class="s_cell_btn"><a href="" class="s_cell_btn_a">Read more</a></span>
                     </div>
                 </div>
             </div>         
