--- a/Index.html
+++ b/Index.html
@@ -99,38 +99,51 @@
             </div>         
         </section>
         <section class="preset">
-            <div class="presetIntroWrap">
-                <span class="presetIntroWrap__wave"></span>
-                <h3 class="presetIntroWrap__h3">Preset Store</h3>
-                <p class="presetIntroWrap__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
-            </div> 
-            <div class="presetGridWrap">
-                <div class="presetGridWrap__div1 p_cell">
-                    <div class="img_pr_cell"></div>
-                    <h4 class="h4_pr_cell">Mirro Preset Pack Vol. 01</h4>
-                    <p class="pr_cell_p">The first volume is my go-to presets when shooting action sports. Just the right amount of contrast and highlights to make your photo (literally) pop!</p>
+            <div class="presetWrap">
+                <div class="presetIntroWrap">
+                    <span class="presetIntroWrap__wave"></span>
+                    <h3 class="presetIntroWrap__h3">Preset Store</h3>
+                    <p class="presetIntroWrap__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
+                </div> 
+                <div class="presetGridWrap">
+                    <div class="presetGridWrap__div1 p_cell">
+                        <div class="img_pr_cell"></div>
+                        <h4 class="h4_pr_cell">Mirro Preset Pack Vol. 01</h4>
+                        <p class="pr_cell_p">The first volume is my go-to presets when shooting action sports. Just the right amount of contrast and highlights to make your photo (literally) pop!</p>
+                    </div>
+                    <div class="presetGridWrap__div2 p_cell">
+                        <div class="img_pr_cell"></div>
+                        <h4 class="h4_pr_cell">Mirro Preset Pack Vol. 02</h4>
+                        <p class="pr_cell_p">Vol. 02 is dedicated solely to landscape photography. Pay attention to your exposure while out there and these presets will make your photos look great.</p>
+                    </div>
+                    <div class="presetGridWrap__div3 p_cell">
+                        <div class="img_pr_cell"></div>
+                        <h4 class="h4_pr_cell">Mirro Preset Pack Vol. 03</h4>
+                        <p class="pr_cell_p">These are a collection of my most used wedding presets — use with caution as you'll end up loving wedding photography.</p>
+                    </div>
                 </div>
-                <div class="presetGridWrap__div2 p_cell">
-                    <div class="img_pr_cell"></div>
-                    <h4 class="h4_pr_cell">Mirro Preset Pack Vol. 02</h4>
-                    <p class="pr_cell_p">Vol. 02 is dedicated solely to landscape photography. Pay attention to your exposure while out there and these presets will make your photos look great.</p>
+                <div class="presetLinkWrap">
+                    <div class="presetLinkWrap_btn">
+                        <span class="presetLinkWrap_span">
+                            <a href="#" class="preset__btn">Preset store</a>
+                        </span>
+                    </div>
                 </div>
-                <div class="presetGridWrap__div3 p_cell">
-                    <div class="img_pr_cell"></div>
-                    <h4 class="h4_pr_cell">Mirro Preset Pack Vol. 03</h4>
-                    <p class="pr_cell_p">These are a collection of my most used wedding presets — use with caution as you'll end up loving wedding photography.</p>
-                </div>
-            </div>
-            <div class="presetLinkWrap">
-                <span class="presetLinkWrap_span">
-                    <a href="#" class="preset__btn">Preset store</a>
-                </span>
             </div>
         </section>
         <section class="contact">
             <div class="contactWrap">
-                <p class="contactWrap__paragraph"></p>
-                <a href="" class="contactWrap__btn"></a>
+                <div class="contactWrap__paragraph">
+                    <p class="contactWrap__paragraph_p">
+                        Wan't to work together? Follow the link and let's get in touch.
+                    </p>
+                </div>
+                <span class="contactWrap__btn_a">
+                    <a href="" class="contactWrap__btn">
+                        Contact
+                    </a>
+                </span>
+                
             </div>
         </section>
     </main>
