--- a/Index.html
+++ b/Index.html
@@ -148,25 +148,80 @@
         </section>
     </main>
     <footer class="footer">
-        <h2 class="logo__h2"></h2>
         <div class="footerGridWrap">
-            <div class="pages"></div>
-            <div class="presetPacks"></div>
-            <div class="utilityPages"></div>
-            <div class="newsletter"></div>
-            <div class="storeCategories"></div>
-            <div class="businesAreas"></div>
+            <div class="footerLogoWrap">
+                <div class="footerLogoWrap_span"></div>
+            </div>
+            <div class="footerColumnWrap">
+                <div class="pages">
+                    <ul class="pages_li">
+                        <li><a href="#">Pages</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Store</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="presetPacks">
+                    <ul class="presetPacks_li">
+                        <li><a href="#">Preset packs</a></li>
+                        <li><a href="#">Mirro Preset Pack Vol. 01</a></li>
+                        <li><a href="#">Mirro Preset Pack Vol. 02</a></li>
+                        <li><a href="#">Mirro Preset Pack Vol. 03</a></li>
+                        <li><a href="#">Mirro Preset Pack Vol. 04</a></li>
+                    </ul>
+                </div>
+                <div class="utilityPages">
+                    <ul class="utilityPages_li">
+                        <li><a href="#">Utility Pages</a></li>
+                        <li><a href="#">Instructions</a></li>
+                        <li><a href="#">Style guide</a></li>
+                        <li><a href="#">Licenses</a></li>
+                        <li><a href="#">Changelog</a></li>
+                    </ul>
+                </div>
+                <div class="newsletter">
+                    <ul class="newsletter_li">
+                        <li><a href="#">Newsletter</a></li>
+                        <li><a href="#">Subscribe to my newsletter where I share news about upcoming printings and preset sales.</a></li>
+                    </ul>
+                    <div class="newsletter_search"></div>
+                </div>
+                <div class="storeCategories">
+                    <ul class="storeCategories_li">
+                        <li><a href="#">Store categories</a></li>
+                        <li><a href="#">Presets</a></li>
+                        <li><a href="#">Prints</a></li>
+                    </ul>
+                </div>
+                <div class="businesAreas">
+                    <ul class="businesAreas_li">
+                        <li><a href="#">Business Areas</a></li>
+                        <li><a href="#">Wedding Photography</a></li>
+                        <li><a href="#">Sports Photography</a></li>
+                        <li><a href="#">Portrait Photography</a></li>
+                        <li><a href="#">Architecture Photography</a></li>
+                        <li><a href="#">Animal Photography</a></li>
+                        <li><a href="#">Food Photography</a></li>
+                        <li><a href="#">Nature Photography</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footerInfo">
+                <span class="rights">
+                    <ul class="rights_li">
+                        <li>© Mirro Photography, LLC. All rights reserved. Powered by</li>
+                        <li>Webflow</li>
+                    </ul>
+                </span>
+                <span class="social">
+                    <span class="linkedin"></span>
+                    <span class="facebook"></span>
+                    <span class="instagram"></span>
+                    <span class="twitter"></span>
+                </span>
+            </div>
         </div>
-        <div class="footerInfo">
-            <span class="rights"></span>
-            <span class="social">
-                <span class="linkedin"></span>
-                <span class="facebook"></span>
-                <span class="instagram"></span>
-                <span class="twitter"></span>
-            </span>
-        </div>
-
     </footer>
     </div>
 </body>
