--- a/Index.html
+++ b/Index.html
@@ -6,31 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mirro</title>
     <link rel="shortcut icon" href="/img/logo_ico.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../style/normalize.css">
-    <link rel="stylesheet" href="../style/Style.css">
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/Style.css">
 </head>
 <body>
-    <div class="globalWrap">
     <header class="header">
         <div class="headerWrap">
             <div class="logo"></div>
-            <nav class="navigation">
-                <ul class="navigation__ul">
-                    <li class="navigation__presets"><a href="#">Presets</a></li>
-                    <li class="navigation__prints"><a href="#">Prints</a></li>
-                    <li class="navigation__store"><a href="#">Store</a></li>
-                    <li class="navigation__about"><a href="#">About</a></li>
-                    <li class="navigation__contact"><a href="#">Contact</a></li>
-                    <li class="navigation__cart">
+            <ul class="navigation__ul">
+                <li class="navigation__presets"><a href="#">Presets</a></li>
+                <li class="navigation__prints"><a href="#">Prints</a></li>
+                <li class="navigation__store"><a href="#">Store</a></li>
+                <li class="navigation__about"><a href="#">About</a></li>
+                <li class="navigation__contact"><a href="#">Contact</a></li>
+                <li class="navigation__cart">
                         <a href="#" class="cart__href">Cart</a>
                         <div class="navigation__cart_count">
                             <span class="cart__count_span">0</span>
                         </div>
                         
-                    </li>
-                </ul>
-            </nav>
-        </div>   
+                </li>
+            </ul>
+        </div>
     </header>
     <main class="main">
         <section class="intro">
@@ -209,20 +206,17 @@
             </div>
             <div class="footerInfo">
                 <span class="rights">
-                    <ul class="rights_li">
-                        <li>© Mirro Photography, LLC. All rights reserved. Powered by</li>
-                        <li>Webflow</li>
-                    </ul>
+                    <span>© Mirro Photography, LLC. All rights reserved. Powered by</span>
+                    <span>Webflow</span>
                 </span>
                 <span class="social">
-                    <span class="linkedin"></span>
-                    <span class="facebook"></span>
-                    <span class="instagram"></span>
-                    <span class="twitter"></span>
+                    <span class="linkedin"><a href="#"></a></span>
+                    <span class="facebook"><a href="#"></a></span>
+                    <span class="instagram"><a href=""></a></span>
+                    <span class="twitter"><a href="#"></a></span>
                 </span>
             </div>
         </div>
     </footer>
-    </div>
 </body>
 </html>
