--- a/Index.html
+++ b/Index.html
@@ -130,17 +130,18 @@
         </section>
         <section class="contact">
             <div class="contactWrap">
-                <div class="contactWrap__paragraph">
-                    <p class="contactWrap__paragraph_p">
-                        Wan't to work together? Follow the link and let's get in touch.
-                    </p>
-                </div>
-                <span class="contactWrap__btn_a">
-                    <a href="" class="contactWrap__btn">
-                        Contact
-                    </a>
-                </span>
-                
+                <div class="contactWrapGrid">
+                    <div class="contactWrap__paragraph">
+                        <p class="contactWrap__paragraph_p">
+                            Wan't to work together? Follow the link and let's get in touch.
+                        </p>
+                    </div>
+                    <span class="contactWrap__btn_a">
+                        <a href="" class="contactWrap__btn">
+                            Contact
+                        </a>
+                    </span>
+                </div> 
             </div>
         </section>
     </main>
