fix footer part 1

--- a/Index.html
+++ b/Index.html
@@ -153,7 +153,7 @@
             <div class="footerColumnWrap">
                 <div class="pages">
                     <ul class="pages_li">
-                        <li><a href="#">Pages</a></li>
+                        <li><a class="ch_cl" href="#">Pages</a></li>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Store</a></li>
                         <li><a href="#">About</a></li>
@@ -162,7 +162,7 @@
                 </div>
                 <div class="presetPacks">
                     <ul class="presetPacks_li">
-                        <li><a href="#">Preset packs</a></li>
+                        <li><a class="ch_cl" href="#">Preset packs</a></li>
                         <li><a href="#">Mirro Preset Pack Vol. 01</a></li>
                         <li><a href="#">Mirro Preset Pack Vol. 02</a></li>
                         <li><a href="#">Mirro Preset Pack Vol. 03</a></li>
@@ -171,7 +171,7 @@
                 </div>
                 <div class="utilityPages">
                     <ul class="utilityPages_li">
-                        <li><a href="#">Utility Pages</a></li>
+                        <li><a class="ch_cl" href="#">Utility Pages</a></li>
                         <li><a href="#">Instructions</a></li>
                         <li><a href="#">Style guide</a></li>
                         <li><a href="#">Licenses</a></li>
@@ -180,21 +180,21 @@
                 </div>
                 <div class="newsletter">
                     <ul class="newsletter_li">
-                        <li><a href="#">Newsletter</a></li>
+                        <li><a class="ch_cl" href="#">Newsletter</a></li>
                         <li><a href="#">Subscribe to my newsletter where I share news about upcoming printings and preset sales.</a></li>
                     </ul>
                     <div class="newsletter_search"></div>
                 </div>
                 <div class="storeCategories">
                     <ul class="storeCategories_li">
-                        <li><a href="#">Store categories</a></li>
+                        <li><a class="ch_cl" href="#">Store categories</a></li>
                         <li><a href="#">Presets</a></li>
                         <li><a href="#">Prints</a></li>
                     </ul>
                 </div>
                 <div class="businesAreas">
                     <ul class="businesAreas_li">
-                        <li><a href="#">Business Areas</a></li>
+                        <li><a class="ch_cl" href="#">Business Areas</a></li>
                         <li><a href="#">Wedding Photography</a></li>
                         <li><a href="#">Sports Photography</a></li>
                         <li><a href="#">Portrait Photography</a></li>
