--- a/Index.html
+++ b/Index.html
@@ -31,6 +31,8 @@
     </header>
     <main class="main">
         <section class="intro">
+            <div class="gradient_1"></div>
+            <div class="gradient_2"></div>
             <div class="introWrap">
                 <div class="introLeft">
                     <h1 class="introLeft__h1">Hi, I'm James Mirro & I'm a photographer.</h1>
@@ -43,6 +45,7 @@
             </div> 
         </section>
         <section class="services">
+            <div class="gradientServices_1"></div>
             <div class="servicesWrap">
                 <div class="servicesIntroWrap">
                     <span class="servicesIntroWrap__wave"></span>
@@ -96,6 +99,7 @@
             </div>         
         </section>
         <section class="preset">
+            <div class="gradientPreset"></div>
             <div class="presetWrap">
                 <div class="presetIntroWrap">
                     <span class="presetIntroWrap__wave"></span>
@@ -129,6 +133,7 @@
             </div>
         </section>
         <section class="contact">
+            <div class="gradientContact"></div>
             <div class="contactWrap">
                 <div class="contactWrapGrid">
                     <div class="contactWrap__paragraph">
