--- a/Index.html
+++ b/Index.html
@@ -188,12 +188,12 @@
                         <li><a class="ch_cl" href="#">Newsletter</a></li>
                         <li><a href="#">Subscribe to my newsletter where I share news about upcoming printings and preset sales.</a></li>
                     </ul>
-                    <span class="newsletter_search_wrap">
+                    <div class="newsletter_search_wrap">
                         <form class="newsletter_search"  method="GET" action="submit.php"  target="_self">
                             <input type="email" id="email" name="email" placeholder="Email address">
                             <input type="submit" value="Submit">
                         </form>
-                    </span>
+                    </div>
                 </div>
                 <div class="storeCategories">
                     <ul class="storeCategories_li">
