--- a/Index.html
+++ b/Index.html
@@ -190,8 +190,8 @@
                     </ul>
                     <div class="newsletter_search_wrap">
                         <form class="newsletter_search"  method="GET" action="submit.php"  target="_self">
-                            <input type="email" id="email" name="email" placeholder="Email address">
-                            <input type="submit" value="Submit">
+                            <input type="email" class="email" id="email" name="email" placeholder="Email address">
+                            <input type="submit" class="submit" value="Submit">
                         </form>
                     </div>
                 </div>
@@ -218,7 +218,7 @@
             <div class="footerInfo">
                 <span class="rights">
                     <span>© Mirro Photography, LLC. All rights reserved. Powered by</span>
-                    <span>Webflow</span>
+                    <span class="webflow">Webflow</span>
                 </span>
                 <span class="social">
                     <span class="linkedin"><a href="#"></a></span>
