--- a/Index.html
+++ b/Index.html
@@ -218,7 +218,7 @@
             <div class="footerInfo">
                 <span class="rights">
                     <span>© Mirro Photography, LLC. All rights reserved. Powered by</span>
-                    <span class="webflow">Webflow</span>
+                    <a class="webflow" href="#">Webflow</a>
                 </span>
                 <span class="social">
                     <span class="linkedin"><a href="#"></a></span>
