add services css

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                 <div class="gradient_1"></div>
                 <div class="gradient_2"></div>
                 <div class="introWrap">
-                <div class="introLeft">
+                    <div class="introRight">
+                        <img class="introRight_img" src="/img/James.png" alt="photographer">
+                            </div>
+                    <div class="introLeft">
                     <h1 class="introLeft__h1">Hi, I'm James Mirro & I'm a photographer.</h1>
                     <p class="introLeft__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
                     <div class="introLeft__a"><a href="#">Read more</a></div>
-                </div>
-                <div class="introRight">
-                    <div class="introRight__img"></div>
-                </div>
+                            </div>           
             </div> 
         </div>
             
