--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
             </div>         
         </section>
         <section class="preset">
-            <div class="gradientPreset"></div>
+            <div class="preset-gradient_wrap">
+                <div class="gradientPreset"></div>
             <div class="presetWrap">
                 <div class="presetIntroWrap">
                     <span class="presetIntroWrap__wave"></span>
@@ -135,6 +136,7 @@
                         </span>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
         <section class="contact">
